syntax = "proto3";

package SavvyStreamingAPI;

// SavvyStreamingAPI service definition
service SavvyStreamingAPI {
  // Opens a stream request with the parameters specified and returns a stream response
  rpc StreamMachine (StreamParameters) returns (stream StreamResponse) {}
}

// The request parameters
message StreamParameters {
  string machineId = 1;
}

// The response message containing the json line
message StreamResponse {
  string responseLine = 1;
}
